# JpegCompress

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wenld/jpegcompress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_wenld_jpegcompress_JpegUtils.h  imagelib.cpp  native-lib.cpp
app/src/main/java/com/wenld/jpegcompress/: JpegUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wenld/jpegcompress/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
